welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:21: error: not found: value color
			faireV(color.yellow);
                               ^