welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
def faireV(c:Color) {
	setCouleurBrosse(c);
	avance();
	baisseBrosse();
	leveBrosse();
}

override def run() {
	for (x<-0 to 1) {
		for (x<-0 to 1) {
			faireV(Color.red);
			faireV(Color.blue);
			avance();
			gauche();
			faireV(Color.blue);
			faireV(Color.green);
			avance();
			gauche();
			faireV(Color.green);
			faireV(color.yellow);
			avance();
			gauche();
			faireV(Color.yellow);
			faireV(Color.red);
			avance();
			gauche();
		}
		gauche();
		avance(5);
		droite();
	}
}
